# Med-Intel

./: .gitignore  package.json  pnpm-lock.yaml
AlertQ.git/: packed-refs
AlertQ.git/AlertQ.git/: config
AlertQ.git/AlertQ.git/objects/info/: commit-graph
AlertQ.git/info/: refs
AlertQ.git/objects/info/: packs
AlertQ.git/objects/pack/: pack-cdfbd2eae72fa1c339136aadc7309609e10e385c.bitmap  pack-cdfbd2eae72fa1c339136aadc7309609e10e385c.idx  pack-cdfbd2eae72fa1c339136aadc7309609e10e385c.pack  pack-cdfbd2eae72fa1c339136aadc7309609e10e385c.rev
apps/api/: pyproject.toml
apps/backend/: requirements.txt
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/routes/: medical.py
apps/backend/app/auth/: oauth.py
apps/backend/app/core/: config.py
apps/backend/app/models/: request.py  response.py
data/processed/: medical_dataset.csv
scripts/: prepare_data.py  train_from_csv.py
