[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Harsh5840",email = "shuklaharsh5840@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub (>=0.33.1,<0.34.0)",
    "transformers (>=4.53.0,<5.0.0)",
    "datasets (>=3.6.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
